Beta 1: 
- Initial Beta Release

Beta 2:
- Fixed Things

Beta 3:
- More Fixes

Beta 4
- Updated Launch Process
- InfoPanel
- More Extras
- Better Mod Support